[tool.poetry]
name = "upload-to-github"
version = "0.1.0"
description = ""
authors = ["Shahin Azad <hi@shahinism.com>"]
readme = "README.md"
packages = [{include = "upload_to_github"}]

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^1.58.0"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
